--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.NXNmW {
+  width: 75px !important;
+  height: 50px !important;
+  line-height: 2 !important;
+  background-color: #f4f6f8;
+}
